# aucty

./: .gitignore  Readme.md  package.json  tsconfig.json
aucty_client/utils/: initAuction.ts  layout.ts  utils.ts
aucty_program/: Cargo.toml
aucty_program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
